Serial GC에 영향을 주는 요소들 추가